<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.mr9.billgenerator.NewBillActivity"
    android:gravity="center">

    <TextView
        android:id="@+id/text_newBillNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enterBillNo"
        android:textAlignment="center"
        android:textColor="@color/theme_button_color"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/first_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/starting_bill"
            android:inputType="number"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/last_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/last_bill"
            android:inputType="number"
            android:textAlignment="center" />

    </LinearLayout>

    <Button
        android:id="@+id/button_createBill"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_create_bill" />

</LinearLayout>