<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.mr9.billgenerator.RoughBill"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_roughBill"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/rough_bill"
        android:textAlignment="center"
        android:textColor="@color/theme_button_color"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_texBillnum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/billNo"
            android:textAlignment="center"
            android:textColor="@color/theme_button_color"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_numBillNum"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/billNo"
            android:text="@string/billNo"
            android:textAlignment="center"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10sp">

        <TextView
            android:id="@+id/text_rQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/b_quantity"
            android:textAlignment="center"
            android:textColor="@color/theme_button_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_rRate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/q_rate"
            android:textAlignment="center"
            android:textColor="@color/theme_button_color"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_rTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textAlignment="center"
            android:textColor="@color/theme_button_color"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/rScrollItemList"
        android:layout_width="match_parent"
        android:layout_height="346dp"
        android:gravity="center">

        <LinearLayout
            android:id="@+id/rLinear_List"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/linear_rQuantity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="end|center">

                <TableLayout
                    android:id="@+id/item_rQuntity_column"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center">
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_rRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="end|center">

                <TableLayout
                    android:id="@+id/item_rRate_column"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center">
                </TableLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_rTotal"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:gravity="end|center">

                <TableLayout
                    android:id="@+id/item_rTotal_column"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end|center">
                </TableLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingTop="10sp">
        <TextView
            android:id="@+id/text_rTextFinalTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total"
            android:textAlignment="center"
            android:textColor="@color/theme_button_color"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_rNumFinalTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/total"
            android:textAlignment="center"
            android:textColor="@color/theme_button_color"
            android:textSize="25sp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>
